fix collapsable

--- a/frontend/css/userstyles.css
+++ b/frontend/css/userstyles.css
@@ -288,3 +288,10 @@ footer .credits {
 	padding: 20px 0;
 	text-transform: uppercase;	
 }
+
+/* ====================================================
+	BUTTTON BACKGROUND
+	================================================== */
+a.button-background {
+    color:#192743;
+}
